--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@modelcontextprotocol/sdk": "^1.20.1",
     "dotenv": "^17.2.3",
     "node-fetch": "^3.3.1",
-    "octokit": "^2.0.0"
+    "octokit": "^2.0.0",
+    "trello": "^0.11.0"
   }
 }
